# momo5502_emulator

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: blank.yml  build.yml
cmake/: compiler-env.cmake  utils.cmake
cmake/toolchain/: android-ndk.cmake
src/: CMakeLists.txt
src/analyzer/: CMakeLists.txt  main.cpp  object_watching.hpp  reflect_extension.hpp  reflect_type_info.hpp  std_include.hpp
src/bad-sample/: CMakeLists.txt  bad.cpp
src/common/: CMakeLists.txt
src/common/network/: address.cpp  address.hpp  socket.cpp  socket.hpp  tcp_client_socket.cpp  tcp_client_socket.hpp  tcp_server_socket.cpp  tcp_server_socket.hpp  udp_socket.cpp  udp_socket.hpp
src/common/platform/: compiler.hpp  file_management.hpp  kernel_mapped.hpp  memory.hpp  network.hpp  platform.hpp  primitives.hpp  process.hpp  registry.hpp  status.hpp  synchronisation.hpp  threading.hpp  traits.hpp  unicode.hpp  win_pefile.hpp
src/common/utils/: buffer_accessor.hpp  compression.cpp  compression.hpp  container.hpp  file_handle.hpp  finally.hpp  function.hpp  io.cpp  io.hpp  lazy_object.hpp  moved_marker.hpp  nt_handle.hpp  path_key.hpp  string.hpp  time.cpp  time.hpp  timer.hpp
src/emulator/: CMakeLists.txt  address_utils.hpp  cpu_interface.hpp  emulator.hpp  hook_interface.hpp  main.cpp  memory_interface.hpp  memory_manager.cpp  memory_manager.hpp  memory_permission.hpp  memory_region.hpp  memory_utils.hpp  process_context.hpp  reflect_extension.hpp  scoped_hook.hpp  serializable.hpp  serialization.hpp  serialization_helper.hpp  std_include.hpp  syscalls.cpp  syscalls.hpp  typed_emulator.hpp  unicorn.cpp  unicorn.hpp  unicorn_utils.hpp  x64_emulator.hpp  x64_register.hpp
src/fuzzer/: CMakeLists.txt  main.cpp  resource.rc
src/fuzzing-engine/: CMakeLists.txt  fuzzer.cpp  fuzzer.hpp  input_generator.cpp  input_generator.hpp  random_generator.cpp  random_generator.hpp
src/gdb-stub/: CMakeLists.txt  async_handler.cpp  async_handler.hpp  checksum.hpp  connection_handler.cpp  connection_handler.hpp  gdb_stub.cpp  gdb_stub.hpp  stream_processor.cpp  stream_processor.hpp
src/sample/: CMakeLists.txt  main.cpp  object_watching.hpp  reflect_extension.hpp  reflect_type_info.hpp  resource.rc
src/samples/: CMakeLists.txt
src/samples/bad-sample/: CMakeLists.txt
src/samples/test-sample/: CMakeLists.txt  test.cpp
src/test-sample/: test.cpp
src/tools/: .gitignore  CMakeLists.txt  collect-dlls.bat  create-root.bat  grab-registry.bat
src/tools/dump-apiset/: CMakeLists.txt  dump-apiset.cpp
src/unicorn-emulator/: CMakeLists.txt  function_wrapper.hpp  object.hpp  unicorn.hpp  unicorn_hook.hpp  unicorn_memory_regions.hpp  unicorn_x64_emulator.cpp  unicorn_x64_emulator.hpp
src/unicorn_emulator/: CMakeLists.txt  function_wrapper.hpp  unicorn.hpp  unicorn_hook.hpp  unicorn_x64_emulator.cpp  unicorn_x64_emulator.hpp
src/windows-emulator/: CMakeLists.txt  apiset.hpp  context_frame.cpp  context_frame.hpp  cpu_context.cpp  cpu_context.hpp  emulator_thread.cpp  emulator_thread.hpp  emulator_utils.hpp  exception_dispatch.cpp  exception_dispatch.hpp  file_system.hpp  handles.hpp  io_device.cpp  io_device.hpp  kusd_mmio.cpp  kusd_mmio.hpp  logger.cpp  logger.hpp  memory_manager.cpp  memory_manager.hpp  memory_utils.hpp  process_context.cpp  process_context.hpp  registry_manager.cpp  registry_manager.hpp  std_include.hpp  syscall_dispatcher.cpp  syscall_dispatcher.hpp  syscall_utils.hpp  syscalls.cpp  windows_emulator.cpp  windows_emulator.hpp  windows_objects.hpp  windows_path.hpp
src/windows-emulator-test/: CMakeLists.txt  emulation_test.cpp  emulation_test_utils.hpp  serialization_test.cpp  time_test.cpp
src/windows-emulator/apiset/: apiset.cpp  apiset.hpp
src/windows-emulator/debugging/: gdb_stub.cpp  gdb_stub.hpp  win_x64_gdb_stub_handler.hpp  x64_gdb_stub_handler.hpp  x64_target_descriptions.hpp
src/windows-emulator/devices/: afd_endpoint.cpp  afd_endpoint.hpp  afd_types.hpp  mount_point_manager.cpp  mount_point_manager.hpp
src/windows-emulator/module/: mapped_module.hpp  module_manager.cpp  module_manager.hpp  module_mapping.cpp  module_mapping.hpp
src/windows-emulator/registry/: hive_parser.cpp  hive_parser.hpp  registry_manager.cpp  registry_manager.hpp
src/windows-gdb-stub/: CMakeLists.txt  win_x64_gdb_stub_handler.hpp  x64_gdb_stub_handler.hpp  x64_register_mapping.hpp
src/windows_emulator/: CMakeLists.txt  context_frame.cpp  context_frame.hpp  emulator_utils.hpp  gdb_stub.cpp  gdb_stub.hpp  handles.hpp  logger.cpp  logger.hpp  main.cpp  memory_utils.hpp  module_mapper.cpp  module_mapper.hpp  process_context.hpp  std_include.hpp  syscalls.cpp  syscalls.hpp  windows_emulator.cpp  windows_emulator.hpp
src/windows_emulator/debugging/: x64_gdb_stub_handler.hpp
src/windows_emulator/module/: mapped_module.hpp  module_manager.cpp  module_manager.hpp  module_mapping.cpp  module_mapping.hpp
