add_subdirectory(common)
add_subdirectory(emulator)
add_subdirectory(unicorn-emulator)
add_subdirectory(windows-emulator)
if (NOT MOMO_BUILD_AS_LIBRARY)
    add_subdirectory(analyzer)
    add_subdirectory(fuzzing-engine)
    add_subdirectory(fuzzer)
    if(WIN32)
        add_subdirectory(bad-sample)
        add_subdirectory(test-sample)
    endif()
    add_subdirectory(windows-emulator-test)
endif()
