add_subdirectory(common)
add_subdirectory(emulator)
add_subdirectory(unicorn-emulator)
add_subdirectory(windows-emulator)

if (MOMO_BUILD_AS_LIBRARY)
    if (TARGET zlib)
        # Remove all properties and dependencies from the zlib shared lib target
        # (this will keep the zlibstatic target)
        set_target_properties(zlib PROPERTIES EXCLUDE_FROM_ALL TRUE)
        set_target_properties(zlib PROPERTIES EXCLUDE_FROM_DEFAULT_BUILD TRUE)
        message(STATUS "Target 'zlib' has been disabled in emulator-lib mode.")
    endif()
else()
    add_subdirectory(analyzer)
    add_subdirectory(fuzzing-engine)
    add_subdirectory(fuzzer)
    if(WIN32)
        add_subdirectory(bad-sample)
        add_subdirectory(test-sample)
    endif()
    add_subdirectory(windows-emulator-test)
    add_subdirectory(tools)
endif()
