add_subdirectory(common)
add_subdirectory(emulator)
add_subdirectory(gdb-stub)
add_subdirectory(unicorn-emulator)
add_subdirectory(windows-emulator)
add_subdirectory(windows-gdb-stub)
if (NOT MOMO_BUILD_AS_LIBRARY)
    add_subdirectory(analyzer)
    add_subdirectory(fuzzing-engine)
    add_subdirectory(fuzzer)
    add_subdirectory(windows-emulator-test)
    if(WIN32)
        add_subdirectory(tools)
        add_subdirectory(samples)
    endif()
endif()
